--- a/5.共享缓存和常量内存/CMakeLists.txt
+++ b/5.共享缓存和常量内存/CMakeLists.txt
@@ -4,8 +4,6 @@ project(cuda-day-day VERSION 0.1.0 LANGUAGES C CXX CUDA)
 
 # 查询 cudatoolkit
 find_package(CUDAToolkit REQUIRED)
-find_package(OpenMP REQUIRED)
-
 if (CMAKE_CUDA_COMPILER)
     message(STATUS "nvcc path : ${CMAKE_CUDA_COMPILER}")
 else ()
@@ -41,31 +39,25 @@ function(add_cudadevrt target_name)
 
 endfunction()
 
-set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} -Xcompiler ${OpenMP_CXX_FLAGS}")
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
 
 # 调试/发布模式的CUDA编译选项
 option(ENABLE_CUDA_DEBUG "Enable CUDA debug (cuda-gdb)" OFF)
 if(ENABLE_CUDA_DEBUG)
     set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} -G")        # enable cuda-gdb (may significantly affect performance on some targets)
 else()
-    set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} -lineinfo") # add line information to all builds for debug tools (exclusive to -G option)
-    # set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} -lineinfo -Xptxas -dlcm=cg") # add line information to all builds for debug tools (exclusive to -G option)
-    message("CUDA compiler:" ${CMAKE_CUDA_FLAGS})
-    message("CPP compiler:" ${CMAKE_CXX_FLAGS})
-
+    message("==================================")
+    # set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} -lineinfo") # add line information to all builds for debug tools (exclusive to -G option)
+    set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} -lineinfo -Xptxas -dlcm=cg") # add line information to all builds for debug tools (exclusive to -G option)
 endif()
 
 
 set(COMMON_FILES common.cpp)
 
-
-add_subdirectory(2.编程模型)
-add_subdirectory(3.执行模型)
-add_subdirectory(4.全局内存)
-add_subdirectory(5.共享缓存和常量内存)
-add_subdirectory(6.流和并发)
-add_subdirectory(7.调整指令级原语)
-add_subdirectory(8.GPU加速库和openACC)
-add_subdirectory(9.多GPU编程)
-add_subdirectory(10.程序实现的注意事项)
+# add_executable(checkSmemSquare checkSmemSquare.cu ${COMMON_FILES})
+# add_executable(checkSmemRectangle checkSmemRectangle.cu ${COMMON_FILES})
+# add_executable(reduceInter reduceInter.cu ${COMMON_FILES})
+# add_executable(transposeRectangle transposeRectangle.cu ${COMMON_FILES})
+# add_executable(constantStencil constantStencil.cu ${COMMON_FILES})
+# add_executable(constantReadOnly constantReadOnly.cu ${COMMON_FILES})
+# add_executable(simpleShfl simpleShfl.cu ${COMMON_FILES})
+add_executable(reduceIntegerShfl reduceIntegerShfl.cu ${COMMON_FILES})
