--- a/6.流和并发/CMakeLists.txt
+++ b/6.流和并发/CMakeLists.txt
@@ -60,12 +60,12 @@ endif()
 set(COMMON_FILES common.cpp)
 
 
-add_subdirectory(2.编程模型)
-add_subdirectory(3.执行模型)
-add_subdirectory(4.全局内存)
-add_subdirectory(5.共享缓存和常量内存)
-add_subdirectory(6.流和并发)
-add_subdirectory(7.调整指令级原语)
-add_subdirectory(8.GPU加速库和openACC)
-add_subdirectory(9.多GPU编程)
-add_subdirectory(10.程序实现的注意事项)
+# add_executable(simpleHyperqDepth simpleHyperqDepth.cu ${COMMON_FILES})
+# add_executable(simpleHyperqBreadth simpleHyperqBreadth.cu ${COMMON_FILES})
+# add_executable(simpleHyperqOpenmp simpleHyperqOpenmp.cu ${COMMON_FILES})
+# target_link_libraries(simpleHyperqOpenmp PRIVATE OpenMP::OpenMP_CXX)
+# add_executable(simpleHyperqDependence simpleHyperqDependence.cu ${COMMON_FILES})
+# add_executable(simpleMultiAddDepth simpleMultiAddDepth.cu ${COMMON_FILES})
+# add_executable(simpleMultiAddBreadth simpleMultiAddBreadth.cu ${COMMON_FILES})
+# add_executable(simpleCallback simpleCallback.cu ${COMMON_FILES})
+add_executable(asyncAPI asyncAPI.cu ${COMMON_FILES})
