--- a/3.执行模型/CMakeLists.txt
+++ b/3.执行模型/CMakeLists.txt
@@ -1,4 +1,5 @@
 
+set(COMMON_FILES common.cpp)
 # 构建可执行文件
 add_executable(nestedHelloWorld nestedHelloWorld.cu ${COMMON_FILES})
 add_cudadevrt(nestedHelloWorld)
