--- a/9.多GPU编程/CMakeLists.txt
+++ b/9.多GPU编程/CMakeLists.txt
@@ -59,10 +59,9 @@ endif()
 
 set(COMMON_FILES common.cpp)
 
-add_executable(atomic-ordering atomic-ordering.cu  ${COMMON_FILES})
-add_executable(floating-point-accuracy floating-point-accuracy.cu  ${COMMON_FILES})
-add_executable(floating-point-perf floating-point-perf.cu  ${COMMON_FILES})
-add_executable(fmad fmad.cu ${COMMON_FILES})
-add_executable(intrinsic-standard-comp intrinsic-standard-comp.cu ${COMMON_FILES})
-add_executable(my-atomic-add my-atomic-add.cu ${COMMON_FILES})
-add_executable(nbody nbody.cu ${COMMON_FILES})
+add_executable(simple2DFD simple2DFD.cu  ${COMMON_FILES})
+add_executable(simpleC2C.c simpleC2C  ${COMMON_FILES})
+add_executable(simpleMultiGPU simpleMultiGPU.cu  ${COMMON_FILES})
+add_executable(simpleP2P simpleP2P.c  ${COMMON_FILES})
+add_executable(simpleP2P_CUDA_Aware simpleP2P_CUDA_Aware.c  ${COMMON_FILES})
+add_executable(simpleP2P_PingPong simpleP2P_PingPong.cu  ${COMMON_FILES})
