--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ project(cuda-day-day VERSION 0.1.0 LANGUAGES C CXX CUDA)
 
 # 查询 cudatoolkit
 find_package(CUDAToolkit REQUIRED)
-# find_package(OpenMP REQUIRED)
+find_package(OpenMP REQUIRED)
 
 if (CMAKE_CUDA_COMPILER)
     message(STATUS "nvcc path : ${CMAKE_CUDA_COMPILER}")
@@ -44,7 +44,7 @@ endfunction()
 set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} -Xcompiler ${OpenMP_CXX_FLAGS}")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
 # add_definitions("-g -G") # 添加调试标志
-
+set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} -g -G")     
 
 # 调试/发布模式的CUDA编译选项
 option(ENABLE_CUDA_DEBUG "Enable CUDA debug (cuda-gdb)" ON)
@@ -61,15 +61,13 @@ else()
 endif()
 
 
-set(COMMON_FILES common.cpp)
 
-
-add_subdirectory(2.编程模型)
-add_subdirectory(3.执行模型)
-add_subdirectory(4.全局内存)
-add_subdirectory(5.共享缓存和常量内存)
-add_subdirectory(6.流和并发)
-add_subdirectory(7.调整指令级原语)
+# add_subdirectory(2.编程模型)
+# add_subdirectory(3.执行模型)
+# add_subdirectory(4.全局内存)
+# add_subdirectory(5.共享缓存和常量内存)
+# add_subdirectory(6.流和并发)
+# add_subdirectory(7.调整指令级原语)
 # add_subdirectory(8.GPU加速库和openACC)
 # add_subdirectory(9.多GPU编程)
-# add_subdirectory(10.程序实现的注意事项)
+add_subdirectory(10.程序实现的注意事项)
