--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -70,4 +70,5 @@ endif()
 # add_subdirectory(7.调整指令级原语)
 # add_subdirectory(8.GPU加速库和openACC)
 # add_subdirectory(9.多GPU编程)
-add_subdirectory(10.程序实现的注意事项)
+# add_subdirectory(10.程序实现的注意事项)
+add_subdirectory(tensor_core)
